--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Flush.Tests.HomepageTest" hash-for-method="Loginasvaliduser">Loginasvaliduser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Flush.Tests.HomepageTest" hash-for-method="LoginAsValidUser">LoginAsValidUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Loginasvaliduser">
-                  </a> <!-- Loginasvaliduser -->
-                  <span class="method-name">Loginasvaliduser</span>
+                  <a name="LoginAsValidUser">
+                  </a> <!-- LoginAsValidUser -->
+                  <span class="method-name">LoginAsValidUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -199,14 +199,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Loginasvaliduser')
+data.setCell(0, 1, 'LoginAsValidUser')
 data.setCell(0, 2, 'com.Flush.Tests.HomepageTest')
-data.setCell(0, 3, 53918);
+data.setCell(0, 3, 13572);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 53 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -221,22 +221,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">28 ignored methods</span>
+            <span class="header-content">24 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.Flush.Tests.LoginPopupTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC_021</span>
-                <br/>
-                <span class="ignored-method-name">TC_023</span>
-                <br/>
-                <span class="ignored-method-name">TC_022</span>
-                <br/>
-                <span class="ignored-method-name">TC_024</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.Flush.Tests.HomepageTest</span>
               <div class="ignored-methods-div">
@@ -260,9 +247,9 @@ return data;
                 <br/>
                 <span class="ignored-method-name">Transaction</span>
                 <br/>
-                <span class="ignored-method-name">Passwordnotmatch</span>
-                <br/>
                 <span class="ignored-method-name">walletbalacelist</span>
+                <br/>
+                <span class="ignored-method-name">Passwordnotmatch</span>
                 <br/>
                 <span class="ignored-method-name">Oldpasswordinvalid</span>
                 <br/>
@@ -304,12 +291,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Loginasvaliduser</span>
-                <span class="method-start">194366 ms</span>
+                <span class="method-name">LoginAsValidUser</span>
+                <span class="method-start">116461 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">EndTest</span>
-                <span class="method-start">248323 ms</span>
+                <span class="method-start">130136 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
