--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -23,11 +23,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Passwordnotmatch</td>
+<td>walletbalacelist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>walletbalacelist</td>
+<td>Passwordnotmatch</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -40,6 +40,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>TransactionPageTabsChecking</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginAsValidUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -56,10 +60,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>Google</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Loginasvaliduser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
