--- a/reports/final.html
+++ b/reports/final.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 28, 2022 02:42:27 PM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 28, 2022 03:27:53 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Loginasvaliduser</p>
+            <p class="name">LoginAsValidUser</p>
             <p class="text-sm">
-              <span>2:45:42 PM</span> / <span>00:00:53:761</span>
+              <span>3:29:51 PM</span> / <span>00:00:13:594</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Loginasvaliduser</h5>
-<span class='badge badge-success'>03.28.2022 2:45:42 PM</span>
-<span class='badge badge-danger'>03.28.2022 2:46:36 PM</span>
-<span class='badge badge-default'>00:00:53:761</span>
+<h5 class="test-status text-pass">LoginAsValidUser</h5>
+<span class='badge badge-success'>03.28.2022 3:29:51 PM</span>
+<span class='badge badge-danger'>03.28.2022 3:30:04 PM</span>
+<span class='badge badge-default'>00:00:13:594</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:46:36 PM</td>
+        <td>3:30:04 PM</td>
         <td>
           Test Passed
         </td>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 28, 2022 02:42:27 PM</h3>
+<h3>Mar 28, 2022 03:27:53 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 28, 2022 02:46:59 PM</h3>
+<h3>Mar 28, 2022 03:30:16 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"Loginasvaliduser":53.761
+"LoginAsValidUser":13.594
 };
 </script>
 <div class="row">
