--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6faea6">  <td>22/03/28 14:46:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomepageTest.EndTest()[pri:0, instance:com.Flush.Tests.HomepageTest@384ad17b]">&lt;&lt;EndTest</td> 
+<tr bgcolor="6faea6">  <td>22/03/28 15:30:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomepageTest.EndTest()[pri:0, instance:com.Flush.Tests.HomepageTest@384ad17b]">&lt;&lt;EndTest</td> 
 <td>&nbsp;</td>  <td>main@678433396</td>   <td></td> </tr>
-<tr bgcolor="6faea6">  <td>22/03/28 14:42:28</td>   <td>-248321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomepageTest.Initialization()[pri:0, instance:com.Flush.Tests.HomepageTest@384ad17b]">&gt;&gt;Initialization</td> 
+<tr bgcolor="6faea6">  <td>22/03/28 15:27:54</td>   <td>-130135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomepageTest.Initialization()[pri:0, instance:com.Flush.Tests.HomepageTest@384ad17b]">&gt;&gt;Initialization</td> 
 <td>&nbsp;</td>  <td>main@678433396</td>   <td></td> </tr>
-<tr bgcolor="6faea6">  <td>22/03/28 14:45:42</td>   <td>-53957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest.Loginasvaliduser()[pri:1, instance:com.Flush.Tests.HomepageTest@384ad17b]">Loginasvaliduser</td> 
+<tr bgcolor="6faea6">  <td>22/03/28 15:29:51</td>   <td>-13676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest.LoginAsValidUser()[pri:1, instance:com.Flush.Tests.HomepageTest@384ad17b]">LoginAsValidUser</td> 
   <td>main@678433396</td>   <td></td> </tr>
 </table>
