--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,26 +1,29 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.Flush.Tests.HomepageTest.SignupLogin</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Changepassword</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeGoogle</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.statistics</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.SignupLogin</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Settings</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeLogin</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.VIP</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.TransactionPageTabsChecking</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.LoginAsValidUser</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.Oldpasswordinvalid</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.Passwordnotmatch</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.walletbalacelist</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.Logout</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.Passwordcancel</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeregistration</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeForgot</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeGoogle</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.UserLoginLogout</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.statistics</td></tr>
+<tr><td>com.Flush.Tests.HomepageTest.VIP</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Statisticspagechecking</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Transaction</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.walletbalacelist</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.Passwordnotmatch</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.Oldpasswordinvalid</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.Logout</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.RecoveryPasswordBackToLogin</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.JoinWithYourEmail</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.signup</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Logot</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.changingusername</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.Passwordcancel</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Cashier</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeregistration</td></tr>
 <tr><td>com.Flush.Tests.HomepageTest.Google</td></tr>
-<tr><td>com.Flush.Tests.HomepageTest.LoginWelcomeForgot</td></tr>
+<tr><td>com.Flush.Tests.VipTestcases.CheckingVippagTabs</td></tr>
+<tr><td>com.Flush.Tests.VipTestcases.CheckingHeaderLoyalityText</td></tr>
 </table>
