--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a583f8">  <td>22/03/28 14:35:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomepageTest.Initialization()[pri:0, instance:com.Flush.Tests.HomepageTest@670b40af]">&gt;&gt;Initialization</td> 
-<td>&nbsp;</td>  <td>main@2134991632</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>22/03/28 14:36:42</td>   <td>79526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomepageTest.EndTest()[pri:0, instance:com.Flush.Tests.HomepageTest@670b40af]">&lt;&lt;EndTest</td> 
-<td>&nbsp;</td>  <td>main@2134991632</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>22/03/28 14:36:42</td>   <td>78757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest.Loginasvaliduser()[pri:1, instance:com.Flush.Tests.HomepageTest@670b40af]">Loginasvaliduser</td> 
-  <td>main@2134991632</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:49:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginThroughGamePageTestCases.HiloGame()[pri:1, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">HiloGame</td> 
+  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:51:50</td>   <td>163597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginThroughGamePageTestCases.Initialization()[pri:0, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:53:11</td>   <td>243926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginThroughGamePageTestCases.WheelGame()[pri:1, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">WheelGame</td> 
+  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:51:50</td>   <td>163597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginThroughGamePageTestCases.Initialization()[pri:0, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:43:47</td>   <td>-319863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginThroughGamePageTestCases.CrashGameLogin()[pri:1, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">CrashGameLogin</td> 
+  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:51:50</td>   <td>163597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginThroughGamePageTestCases.Initialization()[pri:0, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:51:50</td>   <td>163597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginThroughGamePageTestCases.Initialization()[pri:0, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:51:34</td>   <td>147073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginThroughGamePageTestCases.MinesGame()[pri:1, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">MinesGame</td> 
+  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:46:32</td>   <td>-154690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginThroughGamePageTestCases.DiceGame()[pri:1, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">DiceGame</td> 
+  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/03/29 21:51:50</td>   <td>163597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginThroughGamePageTestCases.Initialization()[pri:0, instance:com.Flush.Tests.LoginThroughGamePageTestCases@5bcea91b]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
 </table>
