--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6faea6">  <td>22/03/28 15:30:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomepageTest.EndTest()[pri:0, instance:com.Flush.Tests.HomepageTest@384ad17b]">&lt;&lt;EndTest</td> 
-<td>&nbsp;</td>  <td>main@678433396</td>   <td></td> </tr>
-<tr bgcolor="6faea6">  <td>22/03/28 15:27:54</td>   <td>-130135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomepageTest.Initialization()[pri:0, instance:com.Flush.Tests.HomepageTest@384ad17b]">&gt;&gt;Initialization</td> 
-<td>&nbsp;</td>  <td>main@678433396</td>   <td></td> </tr>
-<tr bgcolor="6faea6">  <td>22/03/28 15:29:51</td>   <td>-13676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest.LoginAsValidUser()[pri:1, instance:com.Flush.Tests.HomepageTest@384ad17b]">LoginAsValidUser</td> 
-  <td>main@678433396</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:16:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageWithoutLoginTestcases.CrashGame()[pri:1, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">CrashGame</td> 
+  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:19:02</td>   <td>122872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageWithoutLoginTestcases.DiceGame()[pri:1, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">DiceGame</td> 
+  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:20:18</td>   <td>198992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageWithoutLoginTestcases.HiloGame()[pri:1, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">HiloGame</td> 
+  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:22:48</td>   <td>348679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageWithoutLoginTestcases.Initialization()[pri:0, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:22:48</td>   <td>348679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageWithoutLoginTestcases.Initialization()[pri:0, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:22:48</td>   <td>348679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageWithoutLoginTestcases.Initialization()[pri:0, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:22:48</td>   <td>348679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageWithoutLoginTestcases.Initialization()[pri:0, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:22:48</td>   <td>348679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageWithoutLoginTestcases.Initialization()[pri:0, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:22:35</td>   <td>335577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageWithoutLoginTestcases.MinesGame()[pri:1, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">MinesGame</td> 
+  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="c4f3a0">  <td>22/03/29 21:24:12</td>   <td>433025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageWithoutLoginTestcases.WheelGame()[pri:1, instance:com.Flush.Tests.HomePageWithoutLoginTestcases@223191a6]">WheelGame</td> 
+  <td>main@1892627171</td>   <td></td> </tr>
 </table>
