--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.Flush.Tests.VipTestcases.CheckingVippagTabs</td></tr>
+<tr><td>com.Flush.Tests.VipTestcases.ClaimRewards</td></tr>
 <tr><td>com.Flush.Tests.VipTestcases.CheckingHeaderLoyalityText</td></tr>
+<tr><td>com.Flush.Tests.VipTestcases.ChooseYourPasswordRadioButtonOne</td></tr>
 </table>
