--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Satish\AppData\Local\Temp\testng-eclipse-1434576448\testng-customsuite.xml</span>
+                    <span>C:\Users\Satish\AppData\Local\Temp\testng-eclipse--1023058263\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Flush.Tests.VipTestcases" hash-for-method="name">name</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Flush.Tests.VipTestcases" hash-for-method="ChooseYourPasswordSecondRadioButton">ChooseYourPasswordSecondRadioButton</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="name">
-                  </a> <!-- name -->
-                  <span class="method-name">name</span>
+                  <a name="ChooseYourPasswordSecondRadioButton">
+                  </a> <!-- ChooseYourPasswordSecondRadioButton -->
+                  <span class="method-name">ChooseYourPasswordSecondRadioButton</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Satish\AppData\Local\Temp\testng-eclipse-1434576448\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Satish\AppData\Local\Temp\testng-eclipse--1023058263\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'name')
+data.setCell(0, 1, 'ChooseYourPasswordSecondRadioButton')
 data.setCell(0, 2, 'com.Flush.Tests.VipTestcases')
-data.setCell(0, 3, 42238);
+data.setCell(0, 3, 136850);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 42 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,7 +210,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -218,7 +218,11 @@ return data;
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">CheckingVippagTabs</span>
                 <br/>
+                <span class="ignored-method-name">ClaimRewards</span>
+                <br/>
                 <span class="ignored-method-name">CheckingHeaderLoyalityText</span>
+                <br/>
+                <span class="ignored-method-name">ChooseYourPasswordRadioButtonOne</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -236,8 +240,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">name</span>
-                <span class="method-start">48887 ms</span>
+                <span class="method-name">ChooseYourPasswordSecondRadioButton</span>
+                <span class="method-start">75906 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
