--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a583f8">  <td>22/03/30 15:57:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VipTestcases.Initialization()[pri:0, instance:com.Flush.Tests.VipTestcases@5bcea91b]">&gt;&gt;Initialization</td> 
-<td>&nbsp;</td>  <td>main@79290965</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>22/03/30 15:58:04</td>   <td>48884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VipTestcases.name()[pri:0, instance:com.Flush.Tests.VipTestcases@5bcea91b]">name</td> 
+<tr bgcolor="a583f8">  <td>22/04/04 23:34:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VipTestcases.ChooseYourPasswordSecondRadioButton()[pri:0, instance:com.Flush.Tests.VipTestcases@5bcea91b]">ChooseYourPasswordSecondRadioButton</td> 
   <td>main@79290965</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/04/04 23:33:43</td>   <td>-75897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VipTestcases.Initialization()[pri:0, instance:com.Flush.Tests.VipTestcases@5bcea91b]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@79290965</td>   <td></td> </tr>
 </table>
