--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Satish\AppData\Local\Temp\testng-eclipse--1023058263\testng-customsuite.xml</span>
+                    <span>C:\Users\Satish\AppData\Local\Temp\testng-eclipse--804473778\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Flush.Tests.VipTestcases" hash-for-method="ChooseYourPasswordSecondRadioButton">ChooseYourPasswordSecondRadioButton</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Flush.Tests.DiceGameTestcases" hash-for-method="DiceGameBet">DiceGameBet</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.Flush.Tests.VipTestcases</span>
+              <span class="class-name">com.Flush.Tests.DiceGameTestcases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ChooseYourPasswordSecondRadioButton">
-                  </a> <!-- ChooseYourPasswordSecondRadioButton -->
-                  <span class="method-name">ChooseYourPasswordSecondRadioButton</span>
+                  <a name="DiceGameBet">
+                  </a> <!-- DiceGameBet -->
+                  <span class="method-name">DiceGameBet</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Satish\AppData\Local\Temp\testng-eclipse--1023058263\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Satish\AppData\Local\Temp\testng-eclipse--804473778\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.Flush.Tests.VipTestcases&quot;/&gt;
+      &lt;class name=&quot;com.Flush.Tests.DiceGameTestcases&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ChooseYourPasswordSecondRadioButton')
-data.setCell(0, 2, 'com.Flush.Tests.VipTestcases')
-data.setCell(0, 3, 136850);
+data.setCell(0, 1, 'DiceGameBet')
+data.setCell(0, 2, 'com.Flush.Tests.DiceGameTestcases')
+data.setCell(0, 3, 25559);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,19 +210,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.Flush.Tests.VipTestcases</span>
+              <span class="ignored-class-name">com.Flush.Tests.DiceGameTestcases</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">CheckingVippagTabs</span>
+                <span class="ignored-method-name">DiceGameSetting</span>
                 <br/>
-                <span class="ignored-method-name">ClaimRewards</span>
+                <span class="ignored-method-name">DiceGameLiveStatusButton</span>
                 <br/>
-                <span class="ignored-method-name">CheckingHeaderLoyalityText</span>
+                <span class="ignored-method-name">DiceGameRules</span>
                 <br/>
-                <span class="ignored-method-name">ChooseYourPasswordRadioButtonOne</span>
+                <span class="ignored-method-name">DiceGameFairNessbutton</span>
+                <br/>
+                <span class="ignored-method-name">DiceGameAutoButtonTab</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -234,14 +236,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.Flush.Tests.VipTestcases</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.Flush.Tests.DiceGameTestcases</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Initialization</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">ChooseYourPasswordSecondRadioButton</span>
-                <span class="method-start">75906 ms</span>
+                <span class="method-name">DiceGameBet</span>
+                <span class="method-start">54579 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
