--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>DiceGameFairNessbutton</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>DiceGameSetting</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -23,15 +27,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DiceGameFairNessbutton</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>HalfAmount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>DiceGameAutoButtonTab</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DiceGameDoubleBetAmount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
