--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,8 +1,9 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameSetting</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameLiveStatusButton</td></tr>
-<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameRules</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameFairNessbutton</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameRules</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.HalfAmount</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameBetFullFlowchecking</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameAutoButtonTab</td></tr>
 </table>
