--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a583f8">  <td>22/04/06 18:19:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DiceGameTestcases.HalfAmount()[pri:1, instance:com.Flush.Tests.DiceGameTestcases@5bcea91b]">HalfAmount</td> 
-  <td>main@322836221</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>22/04/06 18:18:52</td>   <td>-55286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DiceGameTestcases.Initialization()[pri:0, instance:com.Flush.Tests.DiceGameTestcases@5bcea91b]">&gt;&gt;Initialization</td> 
-<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/04/07 10:48:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DiceGameTestcases.DiceGameDoubleBetAmount()[pri:1, instance:com.Flush.Tests.DiceGameTestcases@27f723]">DiceGameDoubleBetAmount</td> 
+  <td>main@450003680</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>22/04/07 10:47:40</td>   <td>-54359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DiceGameTestcases.Initialization()[pri:0, instance:com.Flush.Tests.DiceGameTestcases@27f723]">&gt;&gt;Initialization</td> 
+<td>&nbsp;</td>  <td>main@450003680</td>   <td></td> </tr>
 </table>
