Max error message

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DiceGameLiveStatusButton</td>
+<td>MAximumErrorMessageChecking</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DiceGameFairNessbutton</td>
+<td>DiceGameLiveStatusButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -24,6 +24,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>DiceGameRules</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DiceGameFairNessbutton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
