--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Satish\AppData\Local\Temp\testng-eclipse--603861075\testng-customsuite.xml</span>
+                    <span>C:\Users\Satish\AppData\Local\Temp\testng-eclipse-1501967582\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Flush.Tests.DiceGameTestcases" hash-for-method="MAximumErrorMessageChecking">MAximumErrorMessageChecking</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Flush.Tests.DiceGameTestcases" hash-for-method="DiceGameAutoButtonTab">DiceGameAutoButtonTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="MAximumErrorMessageChecking">
-                  </a> <!-- MAximumErrorMessageChecking -->
-                  <span class="method-name">MAximumErrorMessageChecking</span>
+                  <a name="DiceGameAutoButtonTab">
+                  </a> <!-- DiceGameAutoButtonTab -->
+                  <span class="method-name">DiceGameAutoButtonTab</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Satish\AppData\Local\Temp\testng-eclipse--603861075\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Satish\AppData\Local\Temp\testng-eclipse-1501967582\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'MAximumErrorMessageChecking')
+data.setCell(0, 1, 'DiceGameAutoButtonTab')
 data.setCell(0, 2, 'com.Flush.Tests.DiceGameTestcases')
-data.setCell(0, 3, 19723);
+data.setCell(0, 3, 38589);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 38 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,6 +220,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">DiceGameLiveStatusButton</span>
                 <br/>
+                <span class="ignored-method-name">MAximumErrorMessageChecking</span>
+                <br/>
                 <span class="ignored-method-name">DiceGameRules</span>
                 <br/>
                 <span class="ignored-method-name">DiceGameFairNessbutton</span>
@@ -229,8 +231,6 @@ return data;
                 <span class="ignored-method-name">DiceGameBetFullFlowchecking</span>
                 <br/>
                 <span class="ignored-method-name">DiceGameDoubleBetAmount</span>
-                <br/>
-                <span class="ignored-method-name">DiceGameAutoButtonTab</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -248,8 +248,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">MAximumErrorMessageChecking</span>
-                <span class="method-start">101415 ms</span>
+                <span class="method-name">DiceGameAutoButtonTab</span>
+                <span class="method-start">79177 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
