auto test cases

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -2,9 +2,13 @@
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameSetting</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameLiveStatusButton</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.MAximumErrorMessageChecking</td></tr>
-<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameRules</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameFairNessbutton</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameRules</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameAutoNumberOfBetsThree</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameAutoDoubleAmount</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.HalfAmount</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameBetFullFlowchecking</td></tr>
 <tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameDoubleBetAmount</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameAutoHalfAmount</td></tr>
+<tr><td>com.Flush.Tests.DiceGameTestcases.DiceGameAutoButtonTab</td></tr>
 </table>
